--- a/4porcodio.html
+++ b/4porcodio.html
@@ -1,33 +1,52 @@
 ---
-title: 55 Porco Dio
+title: Porco Dio
 layout: page
 ---
 
-<input id="photos" type="file" multiple="">
-<div id="results"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cat or Dog Classifier</title>
+  <script type="module" defer>
+    import { Client } from "https://cdn.jsdelivr.net/npm/@gradio/client/+esm";
 
-<p><i>Thanks to Dani for assistance with this implementation.</i></p>
+    async function handleImageUpload(event) {
+      const file = event.target.files[0];
+      if (!file) {
+        alert("Please upload an image!");
+        return;
+      }
 
-<script>
-    async function get_pred(file) {
-        return new Promise(async resolve => {
-            const reader = new FileReader();
-            reader.onload = async () => {
-                data = JSON.stringify({ "data": [reader.result] })
-                post = { method: "POST", body: data, headers: { "Content-Type": "application/json" } }
-                const response = await fetch('https://hf.space/embed/jph00/pets/+/api/predict/', post)
-                const json = await response.json();
-                const prediction = json['data'][0]['confidences'][0];
-                const div = document.createElement('div');
-                div.innerHTML = `<img class="prediction" src="${reader.result}" width="300"> <p>${prediction['label']}</p>`
-                results.append(div);
-                return resolve(prediction)
-            }
-            reader.readAsDataURL(file);
-        })
+      try {
+        // Show a loading message
+        const output = document.getElementById("output");
+        output.textContent = "Processing...";
+
+        // Connect to HuggingFace Space
+        const client = await Client.connect("danielecelsa/cat-dog-final");
+
+        // Send image to the API
+        const result = await client.predict("/predict", {
+          immagine: new Blob([file]),
+        });
+
+        // Display the result
+        output.textContent = `Prediction: ${JSON.stringify(result.data)}`;
+      } catch (error) {
+        console.error(error);
+        alert("An error occurred while processing the image.");
+      }
     }
-    photos.addEventListener('input', async () => {
-        results.innerHTML = "";
-        await Promise.allSettled([...photos.files].map(get_pred));
-    });
-</script>
+  </script>
+</head>
+<body>
+  <div style="text-align: center; padding: 20px;">
+    <h1>Cat or Dog Classifier</h1>
+    <p>Upload an image to classify whether it's a cat or a dog!</p>
+    <input type="file" accept="image/*" id="image-upload" onchange="handleImageUpload(event)">
+    <p id="output" style="margin-top: 20px; font-size: 1.2em;"></p>
+  </div>
+</body>
+</html>
